--- a/src/main.scss
+++ b/src/main.scss
@@ -27,6 +27,7 @@
 @import '../node_modules/bootstrap/scss/transitions';
 @import '../node_modules/bootstrap/scss/modal';
 @import '../node_modules/bootstrap/scss/close';
+@import '../node_modules/bootstrap/scss/alert';
 // helpers
 @import '../node_modules/bootstrap/scss/helpers';
 @import '../node_modules/bootstrap/scss/utilities/api';
