--- a/src/themes.scss
+++ b/src/themes.scss
@@ -9,7 +9,8 @@
     --color-stats-bg-2: #eea154;
     --color-stats-bg-3: #da797a;
     --color-stats-bg-4: #82b6b2;
-    --color-alert-text: #4cdf99;
+    --color-alert-success: #4cdf99;
+    --color-alert-danger: #da797a;
     --border: 1px solid var(--color-main) !important;
     --drop-shadow: 1px 1px 26px 0px rgba(0, 0, 0, 0.36);
     --toggler-icon: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
