--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@
 @import '../node_modules/bootstrap/scss/variables';
 @import '../node_modules/bootstrap/scss/mixins';
 // layout & components
+@import '../node_modules/bootstrap/scss/maps';
 @import '../node_modules/bootstrap/scss/root';
 @import '../node_modules/bootstrap/scss/utilities';
 @import '../node_modules/bootstrap/scss/reboot';
