solarized: change main and ticks color

--- a/src/themes.scss
+++ b/src/themes.scss
@@ -71,10 +71,10 @@
 
 // https://ethanschoonover.com/solarized/
 [data-theme='solarized'] {
-    --color-main: #839496;
+    --color-main: #eee8d5;
     --color-background: #002b36;
     --color-hover: #073642;
-    --color-text-muted: #eee8d5;
+    --color-text-muted: #93a1a1;
     --color-footer-background: #073642;
     --border: 1px solid var(--color-main) !important;
 }
